исправление какой то странной ошибки

--- a/creative_plus/ru_RU.properties
+++ b/creative_plus/ru_RU.properties
@@ -166,7 +166,7 @@ creative_plus.trigger.projectile_hit.description=Выполняет код, ко
 creative_plus.trigger.projectile_hit.sign=Снаряд попал
 creative_plus.trigger.item_despawn.name=Предмет исчез
 creative_plus.trigger.item_despawn.description=Выполняет код, когда предмет исчезает из мира спустя 5 минут после его создания
-creative_plus.trigger.item_despawn.sign=Снаряд попал
+creative_plus.trigger.item_despawn.sign=Предмет исчез
 creative_plus.trigger.entity_death.name=Смерть сущности
 creative_plus.trigger.entity_death.description=Выполняет код, когда сущности умерла
 creative_plus.trigger.entity_death.sign=Смерть
