--- a/creative_plus/ru_RU.properties
+++ b/creative_plus/ru_RU.properties
@@ -1,6 +1,6 @@
 creative_plus.trigger.cancellable=Отменяемый
-creative_plus.trigger.player_right_click.additional_info=Триггер будет выполнятся несколько раз, если игрок удерживает правую кнопки мыши
-creative_plus.trigger.player_left_click.additional_info=Триггер не срабатывает, если игрок наносит урон или если игрок смотрит на блок в режиме приключения
+creative_plus.trigger.player_right_click.additional_information=Триггер будет выполнятся несколько раз, если игрок удерживает правую кнопки мыши
+creative_plus.trigger.player_left_click.additional_information=Триггер не срабатывает, если игрок наносит урон или если игрок смотрит на блок в режиме приключения
 creative_plus.trigger.player_dummy.name=...
 creative_plus.trigger.player_dummy.description=...
 creative_plus.trigger.player_dummy.sign=...
@@ -2670,36 +2670,97 @@ creative_plus.argument.game_value.name=Игровое значение
 creative_plus.argument.any.name=Любое значение
 creative_plus.argument.set=Значение установлено:
 creative_plus.editor_equipment.player_event.name=Триггер игрока
-creative_plus.editor_equipment.player_event.description=Используется для выполнения кода, когда игрок что-то делает или когда что-то происходит с игроком
+creative_plus.editor_equipment.player_event.description=Выполняет строку кода, когда игрок выполняет действие или действие выполнено над ним.
+creative_plus.editor_equipment.player_event.examples.example_1=» Выполняет код, когда игрок заходит в мир
+creative_plus.editor_equipment.player_event.examples.example_2=» Выполняет код, когда игрок начинает идти
+creative_plus.editor_equipment.player_event.examples.example_3=» Выполняет код, когда игрок возрождается
 creative_plus.editor_equipment.entity_event.name=Триггер сущности
-creative_plus.editor_equipment.entity_event.description=Используется для выполнения кода, когда сущность что-то делает или когда что-то происходит с сущностью
+creative_plus.editor_equipment.entity_event.description=Выполняет строку кода, когда сущность выполняет действие или действие выполнено над ней.
+creative_plus.editor_equipment.entity_event.examples.example_1=» Выполняет код, когда блок упал
+creative_plus.editor_equipment.entity_event.examples.example_2=» Выполняет код, когда сущность умерла
+creative_plus.editor_equipment.entity_event.examples.example_3=» Выполняет код, когда сущность получила урон
 creative_plus.editor_equipment.world_event.name=Триггер мира
-creative_plus.editor_equipment.world_event.description=Используется для выполнения кода, когда что-то происходит в мире
-creative_plus.editor_equipment.game_action.name=Действие игры
-creative_plus.editor_equipment.game_action.description=Используется для выполнения действий, связанных с миром и игрой
-creative_plus.editor_equipment.if_entity.name=Если существо
-creative_plus.editor_equipment.if_entity.description=Используется для выполнения кода внутри, если определённое условие связанное с существом выполнено
+creative_plus.editor_equipment.world_event.description=Выполняет код, когда в мире происходит действие.
+creative_plus.editor_equipment.world_event.examples.example_1=» Выполняет код, когда сгорает блок
+creative_plus.editor_equipment.world_event.examples.example_2=» Выполняет код, когда колокол звенит
+creative_plus.editor_equipment.world_event.examples.example_3=» Выполняет код, когда блок сгенерирован
+creative_plus.editor_equipment.game_action.name=Действие над миром
+creative_plus.editor_equipment.game_action.description=Выполняет действия, связанные с миром.
+creative_plus.editor_equipment.game_action.examples.example_1=» Создать сущность
+creative_plus.editor_equipment.game_action.examples.example_2=» Создать скорборд
+creative_plus.editor_equipment.game_action.examples.example_3=» Отменить событие
+creative_plus.editor_equipment.if_entity.name=Если сущность
+creative_plus.editor_equipment.if_entity.description=Выполняет код внутри поршней, если сущность соблюдает условие, указанное на табличке.
+creative_plus.editor_equipment.if_entity.examples.example_1=» Выполняет код, если сущность существует
+creative_plus.editor_equipment.if_entity.examples.example_2=» Выполняет код, если сущность является снарядом
+creative_plus.editor_equipment.if_entity.examples.example_3=» Выполняет код, если сущность находится рядом с локацией
 creative_plus.editor_equipment.if_player.name=Если игрок
-creative_plus.editor_equipment.if_player.description=Используется для выполнения кода внутри, если определённое условие связанное с игроком выполнено
-creative_plus.editor_equipment.if_game.name=Если игра
-creative_plus.editor_equipment.if_game.description=Используется для выполнения кода внутри, если определённое услове связанное с миром или игрой выполнено
+creative_plus.editor_equipment.if_player.description=Выполняет код внутри поршней, если игрок соблюдает условие, указанное на табличке.
+creative_plus.editor_equipment.if_player.examples.example_1=» Проверяет если игрок плавает
+creative_plus.editor_equipment.if_player.examples.example_2=» Проверяет если игрок летает
+creative_plus.editor_equipment.if_player.examples.example_3=» Проверяет если игрок смотрит на блок
+creative_plus.editor_equipment.if_game.name=Если в мире
+creative_plus.editor_equipment.if_game.description=Выполняет код внутри поршней, если в мире соблюдается условие, указанное на табличке.
+creative_plus.editor_equipment.if_game.examples.example_1=» Проверяет если блок запитан
+creative_plus.editor_equipment.if_game.examples.example_2=» Проверяет если табличка содержит определённый текст
+creative_plus.editor_equipment.if_game.examples.example_3=» Проверяет если хранилище содержит определённые предметы
 creative_plus.editor_equipment.player_action.name=Действие над игроком
-creative_plus.editor_equipment.player_action.description=Используется для выполнения действий, связанных с игроком или несколькими игроками
+creative_plus.editor_equipment.player_action.description=Выполняет действия над игроком или над группой игроков.
+creative_plus.editor_equipment.player_action.examples.example_1=» Выдать предмет
+creative_plus.editor_equipment.player_action.examples.example_2=» Отправить сообщение в чат
+creative_plus.editor_equipment.player_action.examples.example_3=» Замаскировать человека под сущность
 creative_plus.editor_equipment.entity_action.name=Действие над сущностью
-creative_plus.editor_equipment.entity_action.description=Используется для выполнения действий, связанных с сущностью или несколькими сущностями
+creative_plus.editor_equipment.entity_action.description=Выполняет действия над сущностью или над группой сущностей.
+creative_plus.editor_equipment.entity_action.examples.example_1=» Нанести урон
+creative_plus.editor_equipment.entity_action.examples.example_2=» Сделать неуязвимым
+creative_plus.editor_equipment.entity_action.examples.example_3=» Установить размер сущности (для слизня, фантома и иглобрюха)
 creative_plus.editor_equipment.control_action.name=Контроль действий
-creative_plus.editor_equipment.control_action.description=Используется для управления выполнением некоторых или всех блоков кода после него
+creative_plus.editor_equipment.control_action.description=Используется для дальнейшего контроля кода, стоящего после этого блока.
+creative_plus.editor_equipment.control_action.examples.example_1=» Пропустить шаг цикла
+creative_plus.editor_equipment.control_action.examples.example_2=» Остановить последующее выполнение текущей строки кода
+creative_plus.editor_equipment.control_action.examples.example_3=» Остановить выполнение строки кода на определённое время
 creative_plus.editor_equipment.else.name=Иначе
-creative_plus.editor_equipment.else.description=Используется для выполнения кода внутри, если предыдущее условие не выполнено. 'Иначе' должен быть поставлен после блока 'Если'
-creative_plus.editor_equipment.set_variable.name=Установка переменной
-creative_plus.editor_equipment.set_variable.description=Используется для установки и различных операций связанных с переменными
+creative_plus.editor_equipment.else.description=Выполняет код внутри поршней, если условие, привязанное к этому блоку "Иначе", неверно. Данный блок можно поставить, только если предшедствующий ему блок является блоком условия (если игрок, сущность, в мире, переменная).
+creative_plus.editor_equipment.select_action.name=Выбрать объект
+creative_plus.editor_equipment.select_action.description=Создаёт выборку из сущностей, с которой можно будет работать до тех пор, пока вы не сбросите выборку.
+creative_plus.editor_equipment.select_action.examples.example_1=» Выбрать всех игроков в мире
+creative_plus.editor_equipment.select_action.examples.example_2=» Выбрать всех мобов с именем "JustMC"
+creative_plus.editor_equipment.select_action.examples.example_3=» Выбрать последнюю появившуюся сущность
+creative_plus.editor_equipment.set_variable.name=Действие с переменной
+creative_plus.editor_equipment.set_variable.description=Используется для взаимодействия с переменными.
+creative_plus.editor_equipment.set_variable.examples.example_1=» Установить случайное значение
+creative_plus.editor_equipment.set_variable.examples.example_2=» Получить материал блока
+creative_plus.editor_equipment.set_variable.examples.example_3=» Взять длинну текста
 creative_plus.editor_equipment.if_variable.name=Если переменная
-creative_plus.editor_equipment.if_variable.description=Используется для выполнения кода внутри, если определённое условие связанное с переменными выполнено
-creative_plus.editor_equipment.values.name=Переменные
-creative_plus.editor_equipment.values.description=Различные виды перменных, такие как: текст, число, местоположение, звуки, игровые значения, эффекты зелий, и т.д.
+creative_plus.editor_equipment.if_variable.description=Выполняет код внутри поршней, если указанное условие верно. Работает со всеми переменными: число, динамическая переменная и другие.
+creative_plus.editor_equipment.if_variable.examples.example_1=» Проверяет если переменная больше указанного значения
+creative_plus.editor_equipment.if_variable.examples.example_2=» Проверяет если переменная имеет определённый тип
+creative_plus.editor_equipment.if_variable.examples.example_3=» Проверяет если переменная существует
+creative_plus.editor_equipment.process.name=Процесс
+creative_plus.editor_equipment.process.description=Хранит строку кода, которую можно вызвать с помощью блока "Запустить процесс".
+creative_plus.editor_equipment.process.additional_information.info_1=» Чтобы дать название процессу, нажмите ПКМ текстом по табличке
+creative_plus.editor_equipment.process.additional_information.info_2=» Вы можете положить в сундук предмет с цветным названием, описанием или просто предмет, который будет отображаться в списке блока "Запустить процесс"
+creative_plus.editor_equipment.process.additional_information.info_3=» Процесс в отличие от функции запускает собственную строку кода, независимо от строки, где был вызван процесс, то есть блок "контроль действий" не будет влиять на воспроизведение основной ветви кода
+creative_plus.editor_equipment.process.additional_information.info_4=» Используйте процесс, только когда это действительно необходимо
+creative_plus.editor_equipment.start_process.name=Запустить процесс
+creative_plus.editor_equipment.start_process.description=Вызывает строку кода, связанную с блоком процесса. Блок контроля действий не приостанавливает строку кода, в отличие от функции.
+creative_plus.editor_equipment.repeat.name=Цикл
+creative_plus.editor_equipment.repeat.description=Повторяет код внутри поршней в зависимости от выставленных условий.
+creative_plus.editor_equipment.repeat.examples.example_1=» Повторить N раз
+creative_plus.editor_equipment.repeat.examples.example_2=» Повторять для каждого элемента в листе
+creative_plus.editor_equipment.repeat.examples.example_3=» Повторять до тех пор, пока указанное условие верно
+creative_plus.editor_equipment.function.name=Функция
+creative_plus.editor_equipment.function.description=Хранит строку кода, которую можно вызвать с помощью блока "Вызвать функцию".
+creative_plus.editor_equipment.function.additional_information.info_1=» Чтобы дать название функции, нажмите ПКМ текстом по табличке
+creative_plus.editor_equipment.function.additional_information.info_2=» Вы можете положить в сундук предмет с цветным названием, описанием или просто предмет, который будет отображаться в списке блока "Вызвать функцию"
+creative_plus.editor_equipment.function.additional_information.info_3=» Вы можете вынести часто повторяющийся код в функцию и вызывать её, чтобы сэкономить место кода и ваше время.
+creative_plus.editor_equipment.call_function.name=Вызвать функцию
+creative_plus.editor_equipment.call_function.description=Вызывает строку кода, связанную с блоком функции. Строка кода, где вызывается функция, не будет продолжена до тех пор, пока функция не завершит своё выполнение.
+creative_plus.editor_equipment.values.name=Значения
+creative_plus.editor_equipment.values.description=Нажмите ПКМ, чтобы открыть список значений.
 creative_plus.editor_equipment.not_arrow.name=НЕ стрела
-creative_plus.editor_equipment.not_arrow.description=Используйте на блоке условия для инвертирования условия
-creative_plus.item.values.name=Переменные
+creative_plus.editor_equipment.not_arrow.description=Нажмите на блок условия, чтобы поменять условие с "Если" на "Если НЕ".
+creative_plus.item.values.name=Значения
 creative_plus.category.player_event.subcategory.world.name=Триггеры мира
 creative_plus.category.player_event.subcategory.world.description=Вход и выход из мира, прочие триггеры мира
 creative_plus.category.player_event.subcategory.click.name=Триггеры клика
@@ -2738,11 +2799,11 @@ creative_plus.category.world_event.subcategory.world.description=Общие тр
 creative_plus.category.world_event.subcategory.blocks.name=Триггеры блоков
 creative_plus.category.world_event.subcategory.blocks.description=Генерация блоков, изменение уровня редстоуна
 creative_plus.category.else.sign=Иначе
-creative_plus.category.entity.sign=Действие существа
+creative_plus.category.entity.sign=Действие над сущ
 creative_plus.category.repeat.sign=Цикл
-creative_plus.category.control.sign=Контроль
-creative_plus.category.game_action.name=Действие игры
-creative_plus.category.game_action.sign=Действие игры
+creative_plus.category.control.sign=Контроль действий
+creative_plus.category.game_action.name=Действие над миром
+creative_plus.category.game_action.sign=Действие над мир
 creative_plus.category.game_action.subcategory.event.name=Действия с триггерами
 creative_plus.category.game_action.subcategory.event.description=Действия, которые изменяют поведение триггера
 creative_plus.category.game_action.subcategory.web.name=Веб-действия
@@ -2751,17 +2812,17 @@ creative_plus.category.game_action.subcategory.block.name=Действия с б
 creative_plus.category.game_action.subcategory.block.description=Действия, которые взаимодействуют с миром и блоками
 creative_plus.category.game_action.subcategory.entity.name=Создание сущностей
 creative_plus.category.game_action.subcategory.entity.description=Действия, которые создают сущностей в мире
-creative_plus.category.if_game.name=Если игра
-creative_plus.category.if_game.sign=Если игра
-creative_plus.category.select_object.sign=Выбрать обьект
+creative_plus.category.if_game.name=Если в мире
+creative_plus.category.if_game.sign=Если в мире
+creative_plus.category.select_object.sign=Выбрать объект
 creative_plus.category.entity_event.name=Триггер сущности
 creative_plus.category.entity_event.sign=Триггер сущност.
 creative_plus.category.call_function.sign=Вызвать функцию
-creative_plus.category.if_entity.name=Если существо
-creative_plus.category.if_entity.sign=Если существо
+creative_plus.category.if_entity.name=Если сущность
+creative_plus.category.if_entity.sign=Если сущность
 creative_plus.category.start_process.sign=Запуск процесса
 creative_plus.category.function.sign=Функция
-creative_plus.category.variable.sign=Переменная
+creative_plus.category.variable.sign=Значение
 creative_plus.category.process.sign=Процесс
 creative_plus.category.world_event.name=Триггер мира
 creative_plus.category.world_event.sign=Триггер мира
@@ -2775,9 +2836,9 @@ creative_plus.category.if_player.subcategory.misc.name=Прочие услови
 creative_plus.category.if_player.subcategory.misc.description=Если имя равно, если имеет эффект и т.д.
 creative_plus.category.player_event.name=Триггер игрока
 creative_plus.category.player_action.name=Действие над игроком
-creative_plus.category.player_action.sign=Действие игрока
+creative_plus.category.player_action.sign=Действие над игр
 creative_plus.category.entity_action.name=Действие над сущностью
-creative_plus.category.entity_action.sign=Действие сущн.
+creative_plus.category.entity_action.sign=Действие над сущ
 creative_plus.category.entity_action.subcategory.parameters.name=Параметры
 creative_plus.category.entity_action.subcategory.parameters.description=Изменение параметров существа, такие как здоровье, эффекты, горение и другое
 creative_plus.category.entity_action.subcategory.movement.name=Передвижение
@@ -2785,7 +2846,7 @@ creative_plus.category.entity_action.subcategory.movement.description=Запус
 creative_plus.category.entity_action.subcategory.miscellaneous.name=Разное
 creative_plus.category.entity_action.subcategory.miscellaneous.description=Действия, которые относятся к другим категориям
 creative_plus.category.set_variable_action.name=Установка переменной
-creative_plus.category.set_variable_action.sign=Уст. переменной
+creative_plus.category.set_variable_action.sign=Действ. перемен.
 creative_plus.category.set_variable_action.subcategory.setting.name=Присвоение значений
 creative_plus.category.set_variable_action.subcategory.setting.description=Различные операции присвоения
 creative_plus.category.set_variable_action.subcategory.numerical.name=Числовые операции
@@ -2814,9 +2875,9 @@ creative_plus.selection.shooter_player.description=Игрок, который в
 creative_plus.selection.victim_player.name=Жертва
 creative_plus.selection.victim_player.sign=Жертва
 creative_plus.selection.victim_player.description=Игрок, который получил урон или убит в данном триггере
-creative_plus.selection.random_player.name=Рандомный игрок
-creative_plus.selection.random_player.sign=Рандомый
-creative_plus.selection.random_player.description=Рандомый игрок в мире
+creative_plus.selection.random_player.name=Случайный игрок
+creative_plus.selection.random_player.sign=Случайный
+creative_plus.selection.random_player.description=Случайный игрок в мире
 creative_plus.selection.all_players.name=Все игроки
 creative_plus.selection.all_players.sign=Все
 creative_plus.selection.all_players.description=Все игроки в мире
