--- a/creative_plus/ru_RU.properties
+++ b/creative_plus/ru_RU.properties
@@ -2451,87 +2451,87 @@ creative_plus.action.if_game_instrument_equals.argument.instrument.enum.didgerid
 creative_plus.action.if_game_instrument_equals.argument.instrument.enum.bit.name=Бит
 creative_plus.action.if_game_instrument_equals.argument.instrument.enum.banjo.name=Банджо
 creative_plus.action.if_game_instrument_equals.argument.instrument.enum.pling.name=Плинг
-creative_plus.action.select_object_dummy.name=...
-creative_plus.action.select_object_dummy.description=...
-creative_plus.action.select_object_dummy.sign=...
-creative_plus.action.select_object_default_player.name=SELECT_OBJECT_DEFAULT_PLAYER
-creative_plus.action.select_object_default_player.description=...
-creative_plus.action.select_object_default_player.sign=SelectObjectDefaultPlayer
-creative_plus.action.select_object_default_entity.name=SELECT_OBJECT_DEFAULT_ENTITY
-creative_plus.action.select_object_default_entity.description=...
-creative_plus.action.select_object_default_entity.sign=SelectObjectDefaultEntity
-creative_plus.action.select_object_random_player.name=SELECT_OBJECT_RANDOM_PLAYER
-creative_plus.action.select_object_random_player.description=...
-creative_plus.action.select_object_random_player.sign=SelectObjectRandomPlayer
-creative_plus.action.select_object_random_mob.name=SELECT_OBJECT_RANDOM_MOB
-creative_plus.action.select_object_random_mob.description=...
-creative_plus.action.select_object_random_mob.sign=SelectObjectRandomMob
-creative_plus.action.select_object_random_entity.name=SELECT_OBJECT_RANDOM_ENTITY
-creative_plus.action.select_object_random_entity.description=...
-creative_plus.action.select_object_random_entity.sign=SelectObjectRandomEntity
-creative_plus.action.select_object_all_players.name=SELECT_OBJECT_ALL_PLAYERS
-creative_plus.action.select_object_all_players.description=...
-creative_plus.action.select_object_all_players.sign=SelectObjectAllPlayers
-creative_plus.action.select_object_all_mobs.name=SELECT_OBJECT_ALL_MOBS
-creative_plus.action.select_object_all_mobs.description=...
-creative_plus.action.select_object_all_mobs.sign=SelectObjectAllMobs
-creative_plus.action.select_object_all_entities.name=SELECT_OBJECT_ALL_ENTITIES
-creative_plus.action.select_object_all_entities.description=...
-creative_plus.action.select_object_all_entities.sign=SelectObjectAllEntities
-creative_plus.action.select_object_last_player.name=SELECT_OBJECT_LAST_PLAYER
-creative_plus.action.select_object_last_player.description=...
-creative_plus.action.select_object_last_player.sign=SelectObjectLastPlayer
-creative_plus.action.select_object_last_mob.name=SELECT_OBJECT_LAST_MOB
-creative_plus.action.select_object_last_mob.description=...
-creative_plus.action.select_object_last_mob.sign=SelectObjectLastMob
-creative_plus.action.select_object_last_entity.name=SELECT_OBJECT_LAST_ENTITY
-creative_plus.action.select_object_last_entity.description=...
-creative_plus.action.select_object_last_entity.sign=SelectObjectLastEntity
-creative_plus.action.select_object_killer.name=SELECT_OBJECT_KILLER
-creative_plus.action.select_object_killer.description=...
-creative_plus.action.select_object_killer.sign=SelectObjectKiller
-creative_plus.action.select_object_damager.name=SELECT_OBJECT_DAMAGER
-creative_plus.action.select_object_damager.description=...
-creative_plus.action.select_object_damager.sign=SelectObjectDamager
-creative_plus.action.select_object_shooter.name=SELECT_OBJECT_SHOOTER
-creative_plus.action.select_object_shooter.description=...
-creative_plus.action.select_object_shooter.sign=SelectObjectShooter
-creative_plus.action.select_object_projectile.name=SELECT_OBJECT_PROJECTILE
-creative_plus.action.select_object_projectile.description=...
-creative_plus.action.select_object_projectile.sign=SelectObjectProjectile
-creative_plus.action.select_object_victim.name=SELECT_OBJECT_VICTIM
-creative_plus.action.select_object_victim.description=...
-creative_plus.action.select_object_victim.sign=SelectObjectVictim
-creative_plus.action.select_object_player_name.name=SELECT_OBJECT_PLAYER_NAME
-creative_plus.action.select_object_player_name.description=...
-creative_plus.action.select_object_player_name.sign=SelectObjectPlayerName
-creative_plus.action.select_object_mob_name.name=SELECT_OBJECT_MOB_NAME
-creative_plus.action.select_object_mob_name.description=...
-creative_plus.action.select_object_mob_name.sign=SelectObjectMobName
-creative_plus.action.select_object_entity_name.name=SELECT_OBJECT_ENTITY_NAME
-creative_plus.action.select_object_entity_name.description=...
-creative_plus.action.select_object_entity_name.sign=SelectObjectEntityName
-creative_plus.action.select_object_player_condition.name=SELECT_OBJECT_PLAYER_CONDITION
-creative_plus.action.select_object_player_condition.description=...
-creative_plus.action.select_object_player_condition.sign=SelectObjectPlayerCondition
-creative_plus.action.select_object_mob_condition.name=SELECT_OBJECT_MOB_CONDITION
-creative_plus.action.select_object_mob_condition.description=...
-creative_plus.action.select_object_mob_condition.sign=SelectObjectMobCondition
-creative_plus.action.select_object_entity_condition.name=SELECT_OBJECT_ENTITY_CONDITION
-creative_plus.action.select_object_entity_condition.description=...
-creative_plus.action.select_object_entity_condition.sign=SelectObjectEntityCondition
-creative_plus.action.select_object_random_selected.name=SELECT_OBJECT_RANDOM_SELECTED
-creative_plus.action.select_object_random_selected.description=...
-creative_plus.action.select_object_random_selected.sign=SelectObjectRandomSelected
-creative_plus.action.select_object_filter_distance.name=SELECT_OBJECT_FILTER_DISTANCE
-creative_plus.action.select_object_filter_distance.description=...
-creative_plus.action.select_object_filter_distance.sign=SelectObjectFilterDistance
-creative_plus.action.select_object_filter_select.name=SELECT_OBJECT_FILTER_SELECT
-creative_plus.action.select_object_filter_select.description=...
-creative_plus.action.select_object_filter_select.sign=SelectObjectFilterSelect
-creative_plus.action.select_object_none.name=SELECT_OBJECT_NONE
-creative_plus.action.select_object_none.description=...
-creative_plus.action.select_object_none.sign=SelectObjectNone
+creative_plus.action.select_dummy.name=...
+creative_plus.action.select_dummy.description=...
+creative_plus.action.select_dummy.sign=...
+creative_plus.action.select_default_player.name=Выбрать игрока по умолчанию
+creative_plus.action.select_default_player.description=...
+creative_plus.action.select_default_player.sign=По умолчанию
+creative_plus.action.select_default_entity.name=Выбрать сущность по умолчанию
+creative_plus.action.select_default_entity.description=...
+creative_plus.action.select_default_entity.sign=Сущ. По умолч.
+creative_plus.action.select_random_player.name=Выбрать случайного игрока
+creative_plus.action.select_random_player.description=...
+creative_plus.action.select_random_player.sign=Случ. Игрок
+creative_plus.action.select_random_mob.name=Выбрать случайного моба
+creative_plus.action.select_random_mob.description=...
+creative_plus.action.select_random_mob.sign=Случ. Моб
+creative_plus.action.select_random_entity.name=Выбрать случайную сущность
+creative_plus.action.select_random_entity.description=...
+creative_plus.action.select_random_entity.sign=Случ. Сущность
+creative_plus.action.select_all_players.name=Выбрать всех игроков
+creative_plus.action.select_all_players.description=...
+creative_plus.action.select_all_players.sign=Все игроки
+creative_plus.action.select_all_mobs.name=Выбрать всех мобов
+creative_plus.action.select_all_mobs.description=...
+creative_plus.action.select_all_mobs.sign=Все мобы
+creative_plus.action.select_all_entities.name=Выбрать всех сущностей
+creative_plus.action.select_all_entities.description=...
+creative_plus.action.select_all_entities.sign=Все сущности
+creative_plus.action.select_last_player.name=Выбрать последнего игрока
+creative_plus.action.select_last_player.description=...
+creative_plus.action.select_last_player.sign=Последн. игрок
+creative_plus.action.select_last_mob.name=Выбрать последнего заспавненного моба
+creative_plus.action.select_last_mob.description=...
+creative_plus.action.select_last_mob.sign=Последн. моб
+creative_plus.action.select_last_entity.name=Выбрать последнюю заспавненную сущность
+creative_plus.action.select_last_entity.description=...
+creative_plus.action.select_last_entity.sign=Последн. сущн.
+creative_plus.action.select_killer.name=Выбрать убийцу
+creative_plus.action.select_killer.description=...
+creative_plus.action.select_killer.sign=Убийца
+creative_plus.action.select_damager.name=Выбрать атакующего
+creative_plus.action.select_damager.description=...
+creative_plus.action.select_damager.sign=Атакующий
+creative_plus.action.select_shooter.name=Выбрать стрелка
+creative_plus.action.select_shooter.description=...
+creative_plus.action.select_shooter.sign=Стрелок
+creative_plus.action.select_projectile.name=Выбрать снаряд
+creative_plus.action.select_projectile.description=...
+creative_plus.action.select_projectile.sign=Снаряд
+creative_plus.action.select_victim.name=Выбрать жертву
+creative_plus.action.select_victim.description=...
+creative_plus.action.select_victim.sign=Жертва
+creative_plus.action.select_player_by_name.name=Выбрать игрока по имени
+creative_plus.action.select_player_by_name.description=...
+creative_plus.action.select_player_by_name.sign=Игрок по имени
+creative_plus.action.select_mob_by_name.name=Выбрать моба по имени
+creative_plus.action.select_mob_by_name.description=...
+creative_plus.action.select_mob_by_name.sign=Моб по имени
+creative_plus.action.select_entity_by_name.name=Выбрать сущность по имени
+creative_plus.action.select_entity_by_name.description=...
+creative_plus.action.select_entity_by_name.sign=Сущн. по имени
+creative_plus.action.select_player_by_condition.name=Выбрать игрока по условию
+creative_plus.action.select_player_by_condition.description=...
+creative_plus.action.select_player_by_condition.sign=Игрок по усл.
+creative_plus.action.select_mob_condition.name=Выбрать моба по условию
+creative_plus.action.select_mob_condition.description=...
+creative_plus.action.select_mob_condition.sign=Моб по условию
+creative_plus.action.select_entity_condition.name=Выбрать сущность по условию
+creative_plus.action.select_entity_condition.description=...
+creative_plus.action.select_entity_condition.sign=Сущн. по усл.
+creative_plus.action.select_filter_randomly.name=SELEC FILTER RANDOMLY
+creative_plus.action.select_filter_randomly.description=...
+creative_plus.action.select_filter_randomly.sign=SelectFilterRandomly
+creative_plus.action.select_filter_distance.name=SELECT_FILTER_DISTANCE
+creative_plus.action.select_filter_distance.description=...
+creative_plus.action.select_filter_distance.sign=SelectObjectFilterDistance
+creative_plus.action.select_filter_select.name=SELECT_FILTER_SELECT
+creative_plus.action.select_filter_select.description=...
+creative_plus.action.select_filter_select.sign=SelectObjectFilterSelect
+creative_plus.action.select_reset.name=Сбросить выборку
+creative_plus.action.select_reset.description=...
+creative_plus.action.select_reset.sign=Сбросить
 creative_plus.action.else.else.name=Иначе
 creative_plus.action.else.else.description=...
 creative_plus.action.else.else.sign=Иначе
@@ -2814,7 +2814,7 @@ creative_plus.category.game_action.subcategory.entity.name=Создание су
 creative_plus.category.game_action.subcategory.entity.description=Действия, которые создают сущностей в мире
 creative_plus.category.if_game.name=Если в мире
 creative_plus.category.if_game.sign=Если в мире
-creative_plus.category.select_object.sign=Выбрать объект
+creative_plus.category.select_action.sign=Выбрать объект
 creative_plus.category.entity_event.name=Триггер сущности
 creative_plus.category.entity_event.sign=Триггер сущност.
 creative_plus.category.call_function.sign=Вызвать функцию
@@ -2914,6 +2914,70 @@ creative_plus.potion.poison.description=Наносит {0} единиц урон
 creative_plus.potion.slow.description=Уменьшает скорость передвижения на {0}
 creative_plus.potion.weakness.description=Уменьшает урон от ближнего боя на {0}
 creative_plus.potion.wither.description=Наносит {0} единиц урона каждые {1} секунд (и может убить)
+creative_plus.game_value.current_health.name=Текущее здоровье
+creative_plus.game_value.max_health.name=Максимальное здоровье
+creative_plus.game_value.absorption_health.name=Дополнительное здоровье
+creative_plus.game_value.food_level.name=Уровень голода
+creative_plus.game_value.food_saturation.name=Уровень насыщения
+creative_plus.game_value.food_exhaustion.name=Уровень истощения
+creative_plus.game_value.attack_damage.name=Урон от атаки
+creative_plus.game_value.attack_speed.name=Скорость атаки
+creative_plus.game_value.armor_points.name=Очки защиты
+creative_plus.game_value.armor_toughness.name=Твёрдость брони
+creative_plus.game_value.invulnerability_ticks.name=Время бессмертия
+creative_plus.game_value.experience_level.name=Уровень опыта
+creative_plus.game_value.experience_progress.name=Прогресс опыта
+creative_plus.game_value.fire_ticks.name=Время горения
+creative_plus.game_value.remaining_air.name=Оставшийся воздух
+creative_plus.game_value.fall_distance.name=Дистанция падения
+creative_plus.game_value.held_slot.name=Выбранный слот в хотбаре
+creative_plus.game_value.ping.name=Пинг игрока
+creative_plus.game_value.item_usage_progress.name=Процент использования предмета
+creative_plus.game_value.location.name=Местоположение
+creative_plus.game_value.target_block_location.name=Местоположение целевого блока
+creative_plus.game_value.target_fluid_location.name=Местоположение целевой жидкости
+creative_plus.game_value.target_block_face.name=Сторона целевого блока
+creative_plus.game_value.eye_location.name=Местоположение глаз
+creative_plus.game_value.x_coordinate.name=Координата X
+creative_plus.game_value.y_coordinate.name=Координата Y
+creative_plus.game_value.z_coordinate.name=Координата Z
+creative_plus.game_value.pitch.name=Горизонтальный поворот
+creative_plus.game_value.yaw.name=Вертикальный поворот
+creative_plus.game_value.cardinal_direction.name=Кардинальное направление
+creative_plus.game_value.spawn_location.name=Местоположение спавна
+creative_plus.game_value.main_hand_item.name=Предмет в ведущей руке
+creative_plus.game_value.off_hand_item.name=Предмет во второй руке
+creative_plus.game_value.armor_items.name=Предметы брони
+creative_plus.game_value.hotbar_items.name=Предметы в хотбаре
+creative_plus.game_value.inventory_items.name=Предметы в инвентаре
+creative_plus.game_value.cursor_item.name=Предмет на курсоре
+creative_plus.game_value.saddle_item.name=Предмет на седле
+creative_plus.game_value.entity_item.name=ENTITY ITEM
+creative_plus.game_value.name.name=Имя
+creative_plus.game_value.uuid.name=UUID
+creative_plus.game_value.entity_type.name=Тип сущности
+creative_plus.game_value.open_inventory_title.name=Заголовок открытого инвентаря
+creative_plus.game_value.potion_effects.name=Эффекты зелий
+creative_plus.game_value.velocity.name=Вектор скорости
+creative_plus.game_value.event_block_location.name=Местоположение блока события
+creative_plus.game_value.event_block_face.name=Сторона блока события
+creative_plus.game_value.event_damage.name=Нанесённый урон
+creative_plus.game_value.event_damage_cause.name=Причина полученного урона
+creative_plus.game_value.event_heal_amount.name=Количество восстановленного здоровья
+creative_plus.game_value.event_heal_cause.name=Причина исцеления
+creative_plus.game_value.event_power.name=Процент натяжения лука/арбалета
+creative_plus.game_value.event_item.name=Предмет события
+creative_plus.game_value.event_slot.name=Слот события
+creative_plus.game_value.event_close_inventory_cause.name=Причина закрытия инвентаря
+creative_plus.game_value.event_inventory_click_type.name=Тип клика по инвентарю
+creative_plus.game_value.event_fish_state.name=Причина события рыбалки
+creative_plus.game_value.player_count.name=Количество игроков в мире
+creative_plus.game_value.cpu_usage.name=Процент использования процессора
+creative_plus.game_value.server_tps.name=TPS сервера
+creative_plus.game_value.timestamp.name=UNIX-время
+creative_plus.game_value.selection_size.name=Количество выбранных объектов
+creative_plus.game_value.selection_target_names.name=Имена выбранных объектов
+creative_plus.game_value.selection_target_uuids.name=UUID's выбранных объектов
 creative_plus.menu.game_values.general.title=Игровые значения
 creative_plus.menu.game_values.world.title=Мир
 creative_plus.menu.game_values.event.title=Событие
