--- a/auth/ru_RU.properties
+++ b/auth/ru_RU.properties
@@ -5,6 +5,8 @@ auth.registration.menu.minecraft.name=Лицензия Minecraft
 auth.registration.success=Успешная регистрация!
 auth.registration.vk.request_confirmation=Ваш код авторизации: {0} Отправьте его в сообщения сообщества ВК: {1}
 auth.authorization.success=Успешная авторизация!
+auth.authorization.failed=Не удалось авторизироваться
+auth.message=Для того, чтобы начать играть перейдите по ссылке: {0}
 auth.authorization.vk.waiting_for_confirmation=Подтвердите попытку авторизации в сообщениях сообщества ВК: {0}
 auth.authorization.vk.address_blocked=Ваш IP адресс заблокирован для авторизации на этом аккаунте
 auth.authorization.vk.user_not_found=У вашего аккаунта отсутствует привязка к ВКонтакте. Обратитесь к администрации
