--- a/creative_plus/ru_RU.properties
+++ b/creative_plus/ru_RU.properties
@@ -258,12 +258,12 @@ creative_plus.trigger.fluid_level_change.sign=Изм. уровн. воды
 creative_plus.trigger.sponge_absorb.name=Губка впитывает воду
 creative_plus.trigger.sponge_absorb.description=Выполняет код, когда губка впитывает воду
 creative_plus.trigger.sponge_absorb.sign=Губка впит. воду
-creative_plus.trigger.process.process.name=Процесс
-creative_plus.trigger.process.process.description=...
-creative_plus.trigger.process.process.sign=Процесс
-creative_plus.trigger.function.function.name=Функция
-creative_plus.trigger.function.function.description=...
-creative_plus.trigger.function.function.sign=Функция
+creative_plus.trigger.process.name=Процесс
+creative_plus.trigger.process.description=...
+creative_plus.trigger.process.sign=Процесс
+creative_plus.trigger.function.name=Функция
+creative_plus.trigger.function.description=...
+creative_plus.trigger.function.sign=Функция
 creative_plus.action.player_dummy.name=...
 creative_plus.action.player_dummy.description=...
 creative_plus.action.player_dummy.sign=...
@@ -2538,9 +2538,9 @@ creative_plus.action.else.else.sign=Иначе
 creative_plus.action.call_function.call_function.name=CALL_FUNCTION
 creative_plus.action.call_function.call_function.description=...
 creative_plus.action.call_function.call_function.sign=CallFunction
-creative_plus.action.start_process.start_process.name=START_PROCESS
-creative_plus.action.start_process.start_process.description=...
-creative_plus.action.start_process.start_process.sign=StartProcess
+creative_plus.action.start_process.name=Запустить процесс
+creative_plus.action.start_process.description=...
+creative_plus.action.start_process.sign=Запуск Процесс
 creative_plus.action.control_dummy.name=...
 creative_plus.action.control_dummy.description=...
 creative_plus.action.control_dummy.sign=...
