--- a/creative_plus/ru_RU.properties
+++ b/creative_plus/ru_RU.properties
@@ -2987,3 +2987,4 @@ creative_plus.menu.game_values.location.title=Местоположение
 creative_plus.menu.game_values.statistic.title=Статистика
 creative_plus.hint.location_value=Нажмите [{0}] для выбора местоположения
 creative_plus.error.only_in_creative=Доступно только в творческом режиме
+creative_plus.error.infinite_recursion=Обнаружена бесконечная рекурсия. Триггер принудительно остановлен
